--- a/sahuang-minesweeper/src/style.scss
+++ b/sahuang-minesweeper/src/style.scss
@@ -21,235 +21,319 @@ article {
   flex-direction: column;
 }
 
-main {
-  position: relative;
-  flex-grow: 1;
-  height: 0;
-  overflow: auto;
-}
+#field {
+  main {
+    position: relative;
+    flex-grow: 1;
+    height: 0;
+    overflow: overlay;
+    background-color: #c5e1a5;
 
-section {
-  width: var(--cell-size);
-  height: var(--cell-size);
-  // border: 1px solid #00000060;
-  position: absolute;
-  &::before {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    background-color: #C5E1A5;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.5rem;
-    font-weight: 600;
-  }
-
-  &.covered::before {
-    // content: "🟩";
-    content: "";
-    background-color: #1B5E20;
-  }
-  &.c0::before {
-    content: "";
-  }
-  &.c1::before {
-    content: "1";
-    color: #1A237E;
-  }
-  &.c2::before {
-    content: "2";
-    color: #1B5E20;
-  }
-  &.c3::before {
-    content: "3";
-    color: #E53935;
-  }
-  &.c4::before {
-    content: "4";
-    color: #311B92;
-  }
-  &.c5::before {
-    content: "5";
-    color: #880E4F;
-  }
-  &.c6::before {
-    content: "6";
-    color: #006064;
-  }
-  &.c7::before {
-    content: "7";
-    color: #006064;
-  }
-  &.c8::before {
-    content: "8";
-    color: #757575;
-  }
-  &.bomb::before {
-    // content: "💣";
-    content: "explosion";
-    font-family: "Material Symbols Outlined";
-    color: #D32F2F;
-  }
-  &.key::before {
-    content: "key";
-    font-family: "Material Symbols Outlined";
-    animation: keyRotate 1.5s linear infinite alternate;
-    color: #FF6F00;
+    &::-webkit-scrollbar{
+      width: 10px;
+      height: 10px;
+    }
+    
+    &::-webkit-scrollbar-track-piece{
+      background-color: #c5e1a5;
+    }
+    
+    &::-webkit-scrollbar-thumb{
+      background-color: #00000023;
+      outline: 2px solid #c5e1a5;
+      outline-offset: -2px;
+      border: .1px solid #00000034;
+      border-radius: 10px;
+    }
+    
+    &::-webkit-scrollbar-thumb:hover{
+      background-color: #00000056;
+    }
   }
 
-  &#player {
+  section {
+    width: var(--cell-size);
+    height: var(--cell-size);
+    // border: 1px solid #00000060;
     position: absolute;
-    z-index: 1;
-    transition: transform 0.1s linear;
+
+    &::before {
+      display: flex;
+      width: 100%;
+      height: 100%;
+      background-color: #c5e1a5;
+      justify-content: center;
+      align-items: center;
+      font-size: 1.5rem;
+      font-weight: 600;
+    }
+
+    &.covered::before {
+      // content: "🟩";
+      content: "";
+      background-color: #1b5e20;
+    }
+    &.c0::before {
+      content: "";
+    }
+    &.c1::before {
+      content: "1";
+      color: #1a237e;
+    }
+    &.c2::before {
+      content: "2";
+      color: #1b5e20;
+    }
+    &.c3::before {
+      content: "3";
+      color: #e53935;
+    }
+    &.c4::before {
+      content: "4";
+      color: #311b92;
+    }
+    &.c5::before {
+      content: "5";
+      color: #880e4f;
+    }
+    &.c6::before {
+      content: "6";
+      color: #006064;
+    }
+    &.c7::before {
+      content: "7";
+      color: #006064;
+    }
+    &.c8::before {
+      content: "8";
+      color: #757575;
+    }
+    &.bomb::before {
+      // content: "💣";
+      content: "explosion";
+      font-family: "Material Symbols Outlined";
+      color: #d32f2f;
+    }
+    &.key::before {
+      content: "key";
+      font-family: "Material Symbols Outlined";
+      animation: keyRotate 1.5s linear infinite alternate;
+      color: #ff6f00;
+    }
+
+    &#player {
+      position: absolute;
+      z-index: 1;
+      transition: transform 0.1s linear;
+    }
+    &#player::before {
+      text-align: right;
+      content: "↑";
+      background: #0000ff60;
+      font-size: 2.25rem;
+    }
+    &#player[data-direction="up"]::before {
+      content: "↑";
+    }
+    &#player[data-direction="down"]::before {
+      content: "↓";
+    }
+    &#player[data-direction="left"]::before {
+      content: "←";
+    }
+    &#player[data-direction="right"]::before {
+      content: "→";
+    }
+    &#player.up::before {
+      background: #ffff0060;
+      animation: playerUp 1s linear infinite alternate;
+    }
+    &#player.down::before {
+      background: #00ffff60;
+      animation: playerDown 1s linear infinite alternate;
+    }
+    &#player.left::before {
+      background: #ff00ff60;
+      animation: playerLeft 1s linear infinite alternate;
+    }
+    &#player.right::before {
+      background: #ff000060;
+      animation: playerRight 1s linear infinite alternate;
+    }
   }
-  &#player::before {
-    text-align: right;
-    content: "↑";
-    background: #0000ff60;
-    font-size: 2.25rem;
+
+  @keyframes keyRotate {
+    0% {
+      font-weight: 100;
+    }
+    // 25% {
+    //   content: "🔑2";
+    // }
+    // 50% {
+    //   content: "🔑3";
+    // }
+    // 75% {
+    //   content: "🔑4";
+    // }
+    100% {
+      // content: "🔑4";
+      font-weight: 900;
+    }
   }
-  &#player[data-direction="up"]::before {
-    content: "↑";
+
+  @keyframes playerUp {
+    0% {
+      // content: "Pu1";
+      font-weight: 100;
+    }
+    // 25% {
+    //   content: "Pu2";
+    // }
+    // 50% {
+    //   content: "Pu3";
+    // }
+    // 75% {
+    //   content: "Pu4";
+    // }
+    100% {
+      // content: "Pu4";
+      font-weight: 900;
+    }
   }
-  &#player[data-direction="down"]::before {
-    content: "↓";
+  @keyframes playerDown {
+    0% {
+      font-weight: 100;
+    }
+    100% {
+      font-weight: 900;
+    }
+    // 0% {
+    //   content: "Pd1";
+    // }
+    // 25% {
+    //   content: "Pd2";
+    // }
+    // 50% {
+    //   content: "Pd3";
+    // }
+    // 75% {
+    //   content: "Pd4";
+    // }
+    // 100% {
+    //   content: "Pd4";
+    // }
   }
-  &#player[data-direction="left"]::before {
-    content: "←";
+  @keyframes playerLeft {
+    0% {
+      font-weight: 100;
+    }
+    100% {
+      font-weight: 900;
+    }
+    // 0% {
+    //   content: "Pl1";
+    // }
+    // 25% {
+    //   content: "Pl2";
+    // }
+    // 50% {
+    //   content: "Pl3";
+    // }
+    // 75% {
+    //   content: "Pl4";
+    // }
+    // 100% {
+    //   content: "Pl4";
+    // }
   }
-  &#player[data-direction="right"]::before {
-    content: "→";
+  @keyframes playerRight {
+    0% {
+      font-weight: 100;
+    }
+    100% {
+      font-weight: 900;
+    }
+    // 0% {
+    //   content: "Pr1";
+    // }
+    // 25% {
+    //   content: "Pr2";
+    // }
+    // 50% {
+    //   content: "Pr3";
+    // }
+    // 75% {
+    //   content: "Pr4";
+    // }
+    // 100% {
+    //   content: "Pr4";
+    // }
   }
-  &#player.up::before {
-    background: #ffff0060;
-    animation: playerUp 1s linear infinite alternate;
+
+  .noTransition {
+    transition: none !important;
   }
-  &#player.down::before {
-    background: #00ffff60;
-    animation: playerDown 1s linear infinite alternate;
-  }
-  &#player.left::before {
-    background: #ff00ff60;
-    animation: playerLeft 1s linear infinite alternate;
-  }
-  &#player.right::before {
-    background: #ff000060;
-    animation: playerRight 1s linear infinite alternate;
+
+  footer {
+    text-align: center;
+    background-color: #4E342E;
+    color: #fff;
+    padding: 0.5rem;
   }
 }
 
-@keyframes keyRotate {
-  0% {
-    font-weight: 100;
-  }
-  // 25% {
-  //   content: "🔑2";
-  // }
-  // 50% {
-  //   content: "🔑3";
-  // }
-  // 75% {
-  //   content: "🔑4";
-  // }
-  100% {
-    // content: "🔑4";
-    font-weight: 900;
-  }
-}
+article.title {
+  background-color: #4fc3f7;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
 
-@keyframes playerUp {
-  0% {
-    // content: "Pu1";
-    font-weight: 100;
+  span.cloud {
+    font-family: "Material Symbols Outlined";
+    font-variation-settings: "FILL" 1;
+    color: #ffffff80;
+    font-size: 6rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    will-change: transform;
   }
-  // 25% {
-  //   content: "Pu2";
-  // }
-  // 50% {
-  //   content: "Pu3";
-  // }
-  // 75% {
-  //   content: "Pu4";
-  // }
-  100% {
-    // content: "Pu4";
-    font-weight: 900;
-  }
-}
-@keyframes playerDown {
-  0% {
-    font-weight: 100;
-  }
-  100% {
-    font-weight: 900;
-  }
-  // 0% {
-  //   content: "Pd1";
-  // }
-  // 25% {
-  //   content: "Pd2";
-  // }
-  // 50% {
-  //   content: "Pd3";
-  // }
-  // 75% {
-  //   content: "Pd4";
-  // }
-  // 100% {
-  //   content: "Pd4";
-  // }
-}
-@keyframes playerLeft {
-  0% {
-    font-weight: 100;
-  }
-  100% {
-    font-weight: 900;
-  }
-  // 0% {
-  //   content: "Pl1";
-  // }
-  // 25% {
-  //   content: "Pl2";
-  // }
-  // 50% {
-  //   content: "Pl3";
-  // }
-  // 75% {
-  //   content: "Pl4";
-  // }
-  // 100% {
-  //   content: "Pl4";
-  // }
-}
-@keyframes playerRight {
-  0% {
-    font-weight: 100;
-  }
-  100% {
-    font-weight: 900;
-  }
-  // 0% {
-  //   content: "Pr1";
-  // }
-  // 25% {
-  //   content: "Pr2";
-  // }
-  // 50% {
-  //   content: "Pr3";
-  // }
-  // 75% {
-  //   content: "Pr4";
-  // }
-  // 100% {
-  //   content: "Pr4";
-  // }
-}
 
-.noTransition {
-  transition: none !important;
-}
+  h1,
+  section {
+    z-index: 2;
+  }
 
-footer {
-  text-align: center;
+  section {
+    background-color: #795548;
+    border-radius: 1rem;
+    color: #fff;
+    width: min(calc(100% - 2rem), 40rem);
+    padding: 1.5rem 1rem;
+    box-sizing: border-box;
+    text-align: center;
+  }
+
+  section p:first-child {
+    margin-top: 0;
+  }
+
+  section button {
+    display: block;
+    margin: 0 auto;
+    background-color: #4dd0e1;
+    border: 0;
+    font-size: 1.25rem;
+    border-radius: 0.5rem;
+    padding: 0.5rem 2rem;
+
+    &:hover,
+    &:focus {
+      background-color: #80deea;
+    }
+    &:active {
+      background-color: #0097a7;
+    }
+  }
 }
