--- a/sahuang-minesweeper/src/style.scss
+++ b/sahuang-minesweeper/src/style.scss
@@ -1,34 +1,37 @@
 /* ピクセル風を作るなら、文字を原寸大にし、画像のスケールを整数倍に限るよ。覚えてね */
 :root {
   --cell-size: 2rem;
+  --width: 50;
+  --height: 30;
+  --footer-height: 50px;
 }
 
 @font-face {
   font-family: "PixelOperator";
-  src: url(./assets/PixelOperator.ttf) format("truetype");
+  src: url(/assets/PixelOperator.ttf) format("truetype");
 }
 @font-face {
   font-family: "PixelOperator";
   font-weight: 600;
-  src: url(./assets/PixelOperatorHB.ttf) format("truetype");
+  src: url(/assets/PixelOperatorHB.ttf) format("truetype");
 }
 @font-face {
   font-family: "PixelOperator";
   font-weight: 700;
-  src: url(./assets/PixelOperator-Bold.ttf) format("truetype");
+  src: url(/assets/PixelOperator-Bold.ttf) format("truetype");
 }
 @font-face {
   font-family: "PixelOperatorMono";
   font-weight: 700;
-  src: url(./assets/PixelOperatorMono-Bold.ttf) format("truetype");
+  src: url(/assets/PixelOperatorMono-Bold.ttf) format("truetype");
 }
 @font-face {
   font-family: "VeniceClassic";
-  src: url(./assets/VeniceClassic.ttf) format("truetype");
+  src: url(/assets/VeniceClassic.ttf) format("truetype");
 }
 @font-face {
   font-family: "AncientModernTales";
-  src: url("./assets/Ancient Modern Tales.woff") format("woff");
+  src: url("/assets/Ancient Modern Tales.woff") format("woff");
 }
 
 html,
@@ -54,7 +57,17 @@ article {
   flex-direction: column;
 }
 
+div#app {
+  background-color: #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 #field {
+  max-width: calc((var(--width) + 0.4) * var(--cell-size));
+  max-height: calc((var(--height) + 0.4) * var(--cell-size) + var(--footer-height));
+  margin: auto;
   main {
     position: relative;
     flex-grow: 1;
@@ -102,43 +115,43 @@ article {
       font-weight: 600;
     }
     &.covered {
-      background-image: url("./assets/grass-dark.png");
+      background-image: url("/assets/grass-dark.png");
     }
     &.c0 {
-      background-image: url("./assets/grass.png");
+      background-image: url("/assets/grass.png");
     }
     &.c1 {
-      background-image: url("./assets/grass-1.png");
+      background-image: url("/assets/grass-1.png");
     }
     &.c2 {
-      background-image: url("./assets/grass-2.png");
+      background-image: url("/assets/grass-2.png");
     }
     &.c3 {
-      background-image: url("./assets/grass-3.png");
+      background-image: url("/assets/grass-3.png");
     }
     &.c4 {
-      background-image: url("./assets/grass-4.png");
+      background-image: url("/assets/grass-4.png");
     }
     &.c5 {
-      background-image: url("./assets/grass-5.png");
+      background-image: url("/assets/grass-5.png");
     }
     &.c6 {
-      background-image: url("./assets/grass-6.png");
+      background-image: url("/assets/grass-6.png");
     }
     &.c7 {
-      background-image: url("./assets/grass-7.png");
+      background-image: url("/assets/grass-7.png");
     }
     &.c8 {
-      background-image: url("./assets/grass-8.png");
+      background-image: url("/assets/grass-8.png");
     }
     &.bomb {
-      background-image: url("./assets/bomb.png"), url("./assets/grass.png");
+      background-image: url("/assets/bomb.png"), url("/assets/grass.png");
       background-size: 16px 16px, contain;
       background-position: center;
       background-repeat: no-repeat;
     }
     &.key {
-      background-image: url("./assets/key.png"), url("./assets/grass.png");
+      background-image: url("/assets/key.png"), url("/assets/grass.png");
       background-size: 16px 16px, contain;
       background-position: center;
       background-repeat: no-repeat;
@@ -150,16 +163,16 @@ article {
       transition: transform 0.1s linear;
     }
     &#player[data-direction="up"] {
-      background-image: url("./assets/up0.png");
+      background-image: url("/assets/up0.png");
     }
     &#player[data-direction="down"] {
-      background-image: url("./assets/down0.png");
+      background-image: url("/assets/down0.png");
     }
     &#player[data-direction="left"] {
-      background-image: url("./assets/left0.png");
+      background-image: url("/assets/left0.png");
     }
     &#player[data-direction="right"] {
-      background-image: url("./assets/right0.png");
+      background-image: url("/assets/right0.png");
     }
     &#player.up {
       animation: playerUp 0.25s linear infinite alternate;
@@ -177,34 +190,34 @@ article {
 
   @keyframes playerUp {
     0%, 49% {
-      background-image: url("./assets/up1.png");
+      background-image: url("/assets/up1.png");
     }
     50%, 100% {
-      background-image: url("./assets/up2.png");
+      background-image: url("/assets/up2.png");
     }
   }
   @keyframes playerDown {
     0%, 49% {
-      background-image: url("./assets/down1.png");
+      background-image: url("/assets/down1.png");
     }
     50%, 100% {
-      background-image: url("./assets/down2.png");
+      background-image: url("/assets/down2.png");
     }
   }
   @keyframes playerLeft {
     0%, 49% {
-      background-image: url("./assets/left1.png");
+      background-image: url("/assets/left1.png");
     }
     50%, 100% {
-      background-image: url("./assets/left2.png");
+      background-image: url("/assets/left2.png");
     }
   }
   @keyframes playerRight {
     0%, 49% {
-      background-image: url("./assets/right1.png");
+      background-image: url("/assets/right1.png");
     }
     50%, 100% {
-      background-image: url("./assets/right2.png");
+      background-image: url("/assets/right2.png");
     }
   }
 
@@ -214,10 +227,10 @@ article {
 
   footer {
     text-align: center;
-    height: 50px;
+    height: var(--footer-height);
     box-sizing: border-box;
     background-color: #c5e1a5;
-    background-image: url("./assets/Textbox-without-banner.png");
+    background-image: url("/assets/Textbox-without-banner.png");
     image-rendering: pixelated;
     padding: 0.3rem 0.5rem 0;
     display: flex;
@@ -281,7 +294,7 @@ article.title {
   }
 
   section {
-    background-image: url("./assets/Worn-Parchment-BG-2.png");
+    background-image: url("/assets/Worn-Parchment-BG-2.png");
     border-radius: 1rem;
     color: #5D4037;
     width: 465px;
